BUG-2077 word-break:break-all instead of overflow-wrap

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -175,7 +175,7 @@ body {
   margin: 0 0 0 10px;
   padding: 0;
   display: block;
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
 .application__form-field-list li {
   display: table-row;
@@ -795,7 +795,7 @@ textarea.application__form-text-area__size-large {
 
 .application__form-attachment-filename {
   font-size: 14px;
-  overflow-wrap: break-word;
+  word-break:break-all;
 }
 
 .application__form-attachment-error {
