--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -683,7 +683,7 @@ and (max-width: 1000px) {
   margin: 0px;
   font-weight: lighter;
   list-style: none;
-  overflow-wrap: break-word;
+  word-break:break-all;
 }
 
 .application__attachment-review-row-label {
@@ -1660,7 +1660,7 @@ and (max-width: 1000px) {
   font-size: 14px;
   font-weight: 300;
   line-height: 150%;
-  overflow-wrap: break-word;
+  word-break:break-all;
 }
 
 .application__virkailija-readonly-attachment-area {
